// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`extends a style with a customStyle.unorderedListItemContainer 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "flex": 1,
        "flexDirection": "row",
      },
      Object {
        "flex": 2,
      },
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "alignSelf": "center",
          "backgroundColor": "black",
          "borderRadius": 5,
          "height": 5,
          "marginRight": 8,
          "width": 5,
        },
        undefined,
        Object {
          "marginLeft": 0,
        },
      ]
    }
  />
  <Text
    style={
      Array [
        Object {
          "fontSize": 14,
          "fontWeight": "normal",
        },
        Object {
          "textAlign": undefined,
        },
        undefined,
      ]
    }
  >
    Hello World
  </Text>
</View>
`;

exports[`extends a style with customStyles 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "flex": 1,
        "flexDirection": "row",
      },
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "alignSelf": "center",
          "backgroundColor": "black",
          "borderRadius": 5,
          "height": 5,
          "marginRight": 8,
          "width": 5,
        },
        undefined,
        Object {
          "marginLeft": 0,
        },
      ]
    }
  />
  <Text
    style={
      Array [
        Object {
          "fontSize": 14,
          "fontWeight": "normal",
        },
        Object {
          "textAlign": undefined,
        },
        Object {
          "fontSize": 18,
          "fontWeight": "normal",
          "letterSpacing": -0.75,
          "lineHeight": 32,
          "marginLeft": 10,
        },
      ]
    }
  >
    Hello World
  </Text>
</View>
`;

exports[`renders correctly when unorderedListItemBullet.marginLeft is set 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "flex": 1,
        "flexDirection": "row",
      },
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "alignSelf": "center",
          "backgroundColor": "black",
          "borderRadius": 5,
          "height": 5,
          "marginRight": 8,
          "width": 5,
        },
        Object {
          "marginLeft": 14,
        },
        Object {
          "marginLeft": 0,
        },
      ]
    }
  />
  <Text
    style={
      Array [
        Object {
          "fontSize": 14,
          "fontWeight": "normal",
        },
        Object {
          "textAlign": undefined,
        },
        Object {
          "fontSize": 18,
          "fontWeight": "normal",
          "letterSpacing": -0.75,
          "lineHeight": 32,
          "marginLeft": 10,
        },
      ]
    }
  >
    Hello World
  </Text>
</View>
`;

exports[`renders correctly with a unordered-list-item 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "flex": 1,
        "flexDirection": "row",
      },
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "alignSelf": "center",
          "backgroundColor": "black",
          "borderRadius": 5,
          "height": 5,
          "marginRight": 8,
          "width": 5,
        },
        undefined,
        Object {
          "marginLeft": 0,
        },
      ]
    }
  />
  <Text
    style={
      Array [
        Object {
          "fontSize": 14,
          "fontWeight": "normal",
        },
        Object {
          "textAlign": undefined,
        },
        undefined,
      ]
    }
  >
    Hello World
  </Text>
</View>
`;

exports[`renders correctly with a unordered-list-item when depth 1 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "flex": 1,
        "flexDirection": "row",
      },
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "alignSelf": "center",
          "backgroundColor": "black",
          "borderRadius": 5,
          "height": 5,
          "marginRight": 8,
          "width": 5,
        },
        undefined,
        Object {
          "marginLeft": 8,
        },
      ]
    }
  />
  <Text
    style={
      Array [
        Object {
          "fontSize": 14,
          "fontWeight": "normal",
        },
        Object {
          "textAlign": undefined,
        },
        undefined,
      ]
    }
  >
    Hello World
  </Text>
</View>
`;

exports[`renders correctly with a unordered-list-item when depth is undefined 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "flex": 1,
        "flexDirection": "row",
      },
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "alignSelf": "center",
          "backgroundColor": "black",
          "borderRadius": 5,
          "height": 5,
          "marginRight": 8,
          "width": 5,
        },
        undefined,
        Object {
          "marginLeft": 0,
        },
      ]
    }
  />
  <Text
    style={
      Array [
        Object {
          "fontSize": 14,
          "fontWeight": "normal",
        },
        Object {
          "textAlign": undefined,
        },
        undefined,
      ]
    }
  >
    Hello World
  </Text>
</View>
`;

exports[`renders null without a unordered-list-item 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "flex": 1,
        "flexDirection": "row",
      },
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "alignSelf": "center",
          "backgroundColor": "black",
          "borderRadius": 5,
          "height": 5,
          "marginRight": 8,
          "width": 5,
        },
        undefined,
        Object {
          "marginLeft": 0,
        },
      ]
    }
  />
</View>
`;
